# tinystatic

./: .gitignore  .pylintrc  README.md  conftest.py  mypy.ini  pyproject.toml  site_config.toml
.github/workflows/: main.yml  release.yml
docs/: CONFIGURATION_FILE.md  CUSTOM_STEPS.md  PIPELINE_STEPS.md
script/: bootstrap
src/blog/: CopyStaticAssetsStep.py  GeneratePagesStep.py  PrepareEnvironmentStep.py  base.py  generate.py
src/tinystatic/: base.py  cli.py  commands.py  logger.py  utils.py
src/tinystatic/commands/: build.py  generate.py  init.py
src/tinystatic/core/: load_configuration.py  runner.py
src/tinystatic/steps/: copy_static_assets.py  copy_static_assets_step.py  generate_pages.py  generate_pages_step.py  map_content.py  prepare_environment.py  prepare_environment_step.py
tests/: test_copy_static_assets.py  test_generate_pages_step.py  test_init.py  test_map_content.py  test_prepare_environment_step.py
